<resources>
    <string name="app_name">Homework</string>

    <string name="msg_error_input">请输入数值</string>
    <string name="lable_add1">+1 point</string>
    <string name="lable_add2">+2 points</string>
    <string name="lable_add3">+3 points</string>
    <string name="btn_reset_label">reset</string>
    <string name="btn_dollar_label">Dollar</string>
    <string name="btn_euro_label">Euro</string>
    <string name="btn_won_label">Won</string>
    <string name="rmb_hint">Input RMB</string>
    <string name="btn_opencfg_label">Config</string>
    <string name="btn_save_label">save</string>
    <string name="menu_set_label">Setting</string>


</resources>

